RESOLVED FIXED210753
Sending beacons when Fetch KeepAlive feature is disabled crashes the WebProcess
https://bugs.webkit.org/show_bug.cgi?id=210753
Summary Sending beacons when Fetch KeepAlive feature is disabled crashes the WebProcess
Chris Dumez
Reported 2020-04-20 10:42:49 PDT
Sending beacons when Fetch KeepAlive feature is disabled crashes the WebProcess: com.apple.WebKit.Networking: (WebKit) [com.apple.WebKit:IPC] Received an invalid message 'NetworkConnectionToWebProcess::LoadPing' from WebContent process 259, requesting for it to be terminated.
Attachments
Patch (10.44 KB, patch)
2020-04-20 10:46 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-04-20 10:43:04 PDT
Chris Dumez
Comment 2 2020-04-20 10:46:22 PDT
Geoffrey Garen
Comment 3 2020-04-20 10:48:02 PDT
Comment on attachment 396991 [details] Patch r=me
EWS
Comment 4 2020-04-20 11:43:49 PDT
Committed r260382: <https://trac.webkit.org/changeset/260382> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396991 [details].
Note You need to log in before you can comment on or make changes to this bug.