Sending beacons when Fetch KeepAlive feature is disabled crashes the WebProcess https://bugs.webkit.org/show_bug.cgi?id=210753 <rdar://problem/61896221>

Reviewed by Geoffrey Garen.

Source/WebCore:

Test: http/wpt/beacon/beacon-legacy-code-path.html

* testing/InternalSettings.cpp:
(WebCore::InternalSettings::Backup::Backup):
(WebCore::InternalSettings::Backup::restoreTo):
(WebCore::InternalSettings::setFetchAPIKeepAliveEnabled):
* testing/InternalSettings.h:
* testing/InternalSettings.idl:
Add internal settings to disable Fetch Keep Alive for layout testing.

Source/WebKit:

* WebProcess/Network/WebLoaderStrategy.cpp:
(WebKit::WebLoaderStrategy::startPingLoad):
Make sure NetworkResourceLoadParameters's webPageProxyID / webPageID / webFrameID are properly
initialized before sending the IPC or IPC decoding will fail.

LayoutTests:

Add layout test coverage.

* http/wpt/beacon/beacon-legacy-code-path-expected.txt: Added.
* http/wpt/beacon/beacon-legacy-code-path.html: Added.


Canonical link: https://commits.webkit.org/223639@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260382 268f45cc-cd09-0410-ab3c-d52691b4dbfc