Source/WebCore/testing/InternalSettings.h
@@ -131,6 +131,7 @@ public:
     static void setWebGPUEnabled(bool);
     static void setPictureInPictureAPIEnabled(bool);
     static void setScreenCaptureEnabled(bool);
+    static void setFetchAPIKeepAliveEnabled(bool);
 
     static bool webAnimationsCSSIntegrationEnabled();
 
@@ -220,6 +221,7 @@ private:
         bool m_indexedDBWorkersEnabled;
         bool m_webGL2Enabled;
         bool m_setScreenCaptureEnabled;
+        bool m_fetchAPIKeepAliveAPIEnabled;
         
         bool m_shouldMockBoldSystemFontForAccessibility;
 #if USE(AUDIO_SESSION)
